# kraken-std

./: .gitignore  .kraken.py  404.html  README.md  index.html  pyproject.toml  readme.md  sitemap.xml
.changelog/: 0.2.0.toml  _unreleased.toml
.github/workflows/: python-package.yml
build-support/: foobar.py
cargo/: index.html
changelog/: index.html
docker/: index.html
docs/content/: cargo.md  helm.md  index.md  python.md
examples/docker/: kraken.py
examples/docker/.build/: Dockerfile
examples/helm/: kraken.py
examples/helm/kraken-example/: values.yaml
examples/helm/kraken-example/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
examples/helm/kraken-example/templates/tests/: test-connection.yaml
helm/: index.html
python/: index.html
search/: search_index.json
src/examples/docker/: kraken.build.py
src/examples/helm/kraken-example/: Chart.yaml
src/kraken/std/: dist.py  git.py  sccache.py
src/kraken/std/cargo/: __init__.py  config.py  manifest.py  mitm.py  version.py
src/kraken/std/cargo/tasks/: cargo_auth_proxy_task.py  cargo_build_task.py  cargo_bump_version_task.py  cargo_clippy_task.py  cargo_fmt_task.py  cargo_publish_task.py  cargo_sync_config_task.py  cargo_test_task.py
src/kraken/std/descriptors/: resource.py
src/kraken/std/docker/: __init__.py  api.py  backend.py  buildx.py  cliwrapper.py  dockerapi.py  kaniko.py  manifest_tool.py  native.py  rewrite.py  tasks.py  util.py
src/kraken/std/generic/: __init__.py  render_file.py  render_file_task.py
src/kraken/std/git/: __init__.py  gitignore.py  version.py
src/kraken/std/git/tasks/: gitignore_sync_task.py
src/kraken/std/helm/: __init__.py  cliwrapper.py  helmapi.py  tasks.py
src/kraken/std/python/: __init__.py  environments.py  install.py  pyproject.py  settings.py  utils.py  version.py
src/kraken/std/python/buildsystem/: __init__.py  poetry.py  slap.py
src/kraken/std/python/tasks/: base_task.py  black_task.py  build_task.py  flake8_task.py  install_task.py  isort_task.py  login_task.py  mypy_task.py  publish_task.py  pytest_task.py
src/kraken/std/python/tools/: black.py  flake8.py  isort.py  mypy.py  pytest.py
src/tests/: conftest.py  test_cargo_version.py  test_docker_util.py  test_import.py  test_python.py  test_python_version.py
src/tests-ete/docker/: test_backends.py
src/tests/integration/cargo/: test_cargo_private_registry.py
src/tests/integration/cargo/data/hello-world-app/: Cargo.toml
src/tests/integration/cargo/data/hello-world-lib/src/: lib.rs
src/tests/integration/docker/: test_docker_secrets.py
src/tests/integration/helm/: test_helm_oci.py
src/tests/integration/python/: test_python.py
src/tests/integration/python/data/poetry-project/: .kraken.py
src/tests/integration/python/data/poetry-project/src/poetry_project/: __init__.py
src/tests/integration/python/data/slap-project/: .kraken.py
src/tests/utils/: docker.py
tests/: test_import.py
tests-ete/docker/: test_backends.py
