[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kraken-std"
version = "0.1.43"
description = "The Kraken standard library."
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{ include = "kraken/std", from = "src" }]
classifiers = []
keywords = []

[tool.poetry.urls]
# "Bug Tracker" = ""
# Documentation = ""
# Homepage = ""
# Repository = ""

[tool.poetry.dependencies]
python = "^3.7"
"nr.python.environment" = "^0.1.4"
"proxy.py" = "^2.4.3"
httpx = "^0.23.0"
kraken-core = ">=0.6.2,<0.8.0"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
twine = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pyartifactory = "^1.10.0"
cloudsmith-api = "^1.61.3"
types-requests = "^2.28.0"
flaky = "^3.7.0"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "novella==0.2.3", "pydoc-markdown==4.6.0"]

[tool.slap]
typed = true

[tool.slap.test]
check = "slap check"
mypy = "dmypy run src/"
pytest = "PYTHONPATH=src pytest src/tests/ --ignore src/tests/integration --log-cli-level INFO -vv $PYTEST_FLAGS"
pytest-ete = "PYTHONPATH=src pytest src/tests/integration --log-cli-level INFO -vv $PYTEST_FLAGS"
black = "black --check src/"
isort = "isort --check-only src/"
flake8 = "flake8 src/"

[tool.slap.run]
fmt = "black src/ && isort src/"
"docs:build" = "cd docs && novella --base-url kraken-cli/"
"docs:dev" = "cd docs && novella --serve"

[tool.mypy]
python_version = "3.7"
exclude = ["src/tests/integration/.*/data/.*"]
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true

[tool.black]
line-length = 120
