[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kraken-std"
version = "0.3.13"
description = "The Kraken standard library."
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{ include = "kraken/std", from = "src" }]
classifiers = []
keywords = []

[tool.poetry.urls]
# "Bug Tracker" = ""
# Documentation = ""
# Homepage = ""
# Repository = ""

[tool.poetry.dependencies]
python = "^3.7"
"nr.python.environment" = "^0.1.4"
httpx = "^0.23.0"
kraken-core = "^0.10.2"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
twine = "^4.0.1"
termcolor = "^1.1.0"
deprecated = "^1.2.13"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pyartifactory = "^1.10.0"
cloudsmith-api = "^1.61.3"
types-requests = "^2.28.0"
types-termcolor = "^1.1.5"
types-Deprecated = "^1.2.9"
"proxy.py" = "^2.4.3"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "novella==0.2.3", "pydoc-markdown==4.6.0"]

[tool.slap]
typed = true

[tool.slap.run]
"docs:build" = "cd docs && novella --base-url kraken-std/"
"docs:dev" = "cd docs && novella --serve"

[tool.mypy]
python_version = "3.7"
exclude = ["src/tests/integration/.*/data/.*"]
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true

[tool.black]
line-length = 120
